Fixed z-index

--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -90,6 +90,7 @@
   background-size: cover;
   background-position: 0% 0%;
   background-repeat: no-repeat;
+  z-index: -100;
 }
 // hr break
 hr {
